Thu Dec 12 19:22:16 CST 2019
	* collect ast info at IPA_ALL_PASSES_START, to ensure that the
	information we collected is correct. At that time, the original
	gimple_body has been parsed and cleared, the information is now
	traced by ->f->cfg, which may be done in build_gimple_cfg()->
	make_blocks()->make_blocks_1()->... For gimple_label, use
	cleanup_dead_labels() and group_case_labels. Then make_edges().

Sat Dec  7 16:42:03 CST 2019
	* fix si_module->loaded uninitialise issue
	* gen a subshell for collect/analysis/hacking commands
	* fix kern_copyuser.so load error issue

Sat Nov 30 20:01:53 CST 2019
	* fix gcc-8 compile warnings and errors

Sat Aug 17 11:25:16 HKT 2019
	* analysis/gcc/c.cc: fix a mishandled issue
	* add license information for source files

Fri Jul 26 10:38:25 HKT 2019
	Readjust source layout
	* analysis/analysis.c: fix pthread_join join a non exists thread

Tue Jan 15 19:59:14 HKT 2019
	Fix issues
	* another resfile may not found a symbol in current resfile, should
	take a look at in the builtin resfile
	* plugins/sinode.c: check behavior first when looking for a global
	symbol

Mon Jan 14 16:22:16 HKT 2019
	Fix issues
	* static variables may have no location(loc->file NULL).

Tue Jan  8 19:14:36 HKT 2019
	Fix issues
	* plugins/uninit.cc: gen_code_paths may take too long for one path

Thu Jan  3 14:34:50 HKT 2019
	Fix issues
	* plugins/uninit.cc: memory leak
	* pthread_create memory leak issues
	* plugins/utils.cc: gen_code_paths may take too long, ignore functions
	with more than FUNC_CP_MAX.
	* si_core.c: support argv list to execute commands automatically, to run with
	valgrind

Wed Jan  2 00:13:22 HKT 2019
	Fix issues
	* gen_code_paths may alloc too many memory, use clib_rw_pool

Fri Dec 28 10:49:10 HKT 2018
	add support for linux kernel(4.14.x)
	* collect/c.cc: collect files without any function
	* plugins/c.cc: fix BUGs when parsing linux kernel vmlinux resfile