@@ -4,11 +4,11 @@ SRCINV_ROOT=/home/zerons/workspace/srcinv
 GCC_VER_MAJ:=$(shell expr `gcc -dumpversion | cut -f1 -d.`)
 GCC_PLUGIN_INC=/usr/lib/gcc/x86_64-linux-gnu/$(GCC_VER_MAJ)/plugin/include
 
-SELF_CFLAGS=-g -O0 -Wall
-#SELF_CFLAGS+=-DUSE_NCURSES
+SELF_CFLAGS=-g -O3 -Wall
+SELF_CFLAGS+=-DUSE_NCURSES
 SELF_CFLAGS+=-DCONFIG_DEBUG_MODE=1
 
-SELF_CFLAGS+=-DCONFIG_ANALYSIS_THREAD=0x8
+SELF_CFLAGS+=-DCONFIG_ANALYSIS_THREAD=0x10
 #SELF_CFLAGS+=-DCONFIG_THREAD_STACKSZ=0x10*1024*1024
 
 #SELF_CFLAGS+=-DCONFIG_ID_VALUE_BITS=28
